--- a/styles.css
+++ b/styles.css
@@ -4,45 +4,168 @@
   box-sizing: border-box;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  background: rgb(53, 50, 50);
+}
+
+#page-wrapper {
+  background: rgb(219, 210, 210);
+  min-height: 100vh;
+  min-width: 90vw;
+  font-family: "Open Sans", sans-serif;
+}
+
 .invisible {
+  position: absolute;
   display: none;
 }
 
-/* ---------- HEADER ---------- */
+.grid-cell {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
-#header-section {
+option {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+}
+
+button {
+  padding: 8px;
+  border-radius: 5px;
+  background: rgb(255, 167, 4);
+}
+
+button:hover {
+  background: rgb(77, 69, 65);
+  color: white;
+}
+
+input {
+  border-top-style: hidden;
+  border-right-style: hidden;
+  border-left-style: hidden;
+  border-bottom-style: groove;
+  background-color: rgba(238, 238, 238, 0);
+  color: black;
+}
+
+/* ---------- MODAL ---------- */
+
+.modal-header {
+  background: orange;
+  color: white;
+}
+
+.modal-body {
+  background: floralwhite;
+  display: flex;
+  flex-direction: column;
+}
+
+/* ---------- NAVBAR ---------- */
+
+.navbar {
+  height: 100px;
+}
+
+/* ---------- LOGIN MESSAGE ---------- */
+
+#login-message-section {
+  min-width: 80vw;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
-  padding-top: 20px;
+  align-items: center;
+  margin-top: 30vh;
+  margin-left: 20%;
+}
+
+/* ---------- USER OPTIONS ---------- */
+
+#user-options-section {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 /* ---------- FORM ---------- */
 
-#add-btn-div {
-  margin-top: 50px;
-  display: flex;
-  justify-content: center;
-}
-
 #form-container {
+  position: relative;
   display: flex;
   width: 100%;
-  justify-content: space-evenly;
-  margin-top: 20px;
+  align-items: center;
 }
 
-/* ---------- REFRESH ---------- */
-
-#refresh-div {
-  margin-top: 100px;
+#entry-form {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background: floralwhite;
+  padding: 5px 5px;
+  border-radius: 10px;
+}
+
+#form-header {
+  background: orange;
+  display: flex;
+  justify-content: center;
+  padding: 5px 0;
+}
+
+#coin {
+  position: relative;
+}
+
+#autocomplete-results {
+  display: flex;
+  justify-content: start;
+}
+
+.autocomplete-entry {
+  font-size: 0.9rem;
+}
+
+.autocomplete-div:hover {
+  cursor: pointer;
+  background: cyan;
+}
+
+#amount-and-buy {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.selected {
+  background: rgb(136, 255, 0);
+}
+
+/* ---------- ENTRIES SECTION ---------- */
+
+#entries-section {
+  margin: 0px 60px 0 60px;
+  box-shadow: 0 0 5px 1px rgba(53, 48, 48, 0.507);
+  border-radius: 0 50px 0 50px;
+}
+
+.grid-cell {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 
-/* ---------- ENTRIES WRAPPER ---------- */
+.profit {
+  color: rgb(113, 221, 113);
+}
 
-#entries-wrapper {
-  margin: 0 60px 0 60px;
+.loss {
+  color: rgb(236, 40, 40);
 }
 
 /* ---------- ENTRIES HEADER ---------- */
@@ -50,11 +173,19 @@
 #entries-header-container {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  justify-content: center;
   border: 1px solid black;
-  margin-top: 30px;
-  background: #26889c;
-  color: white;
+  border-radius: 0 50px 0 0;
+  padding: 10px 10px 5px 0;
+  background: #e0dcd7;
+  color: black;
+  height: 100px;
+}
+
+#user-currency-select {
+  position: relative;
+  height: 30px;
+  margin-top: 20px;
+  margin-left: 50px;
 }
 
 /* ---------- ENTRIES ---------- */
@@ -68,19 +199,13 @@
 .entry-container {
   position: relative;
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
-  background: #85c3cf;
-  padding-top: 20px;
-}
-
-.grid-cell {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  border-bottom: 1px solid rgb(206, 216, 210);
+  background: rgb(39, 37, 37);
+  color: white;
+  padding: 20px 10px;
 }
 
 .entry-buy-price,
@@ -93,14 +218,103 @@
   font-size: 0.75rem;
 }
 
-.profit {
-  color: green;
-}
-
-.loss {
-  color: red;
+.button-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .entry-del-btn {
+  position: absolute;
+  border-radius: 0px;
+  background: white;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0 5px;
+}
+
+.show-chart-btn {
+  position: relative;
+  z-index: 3;
   border-radius: 10px;
+}
+
+/* ---------- TOTALS ---------- */
+
+#totals-container {
+  position: relative;
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr 1fr 1fr;
+  justify-content: center;
+  border: 1px solid rgb(51, 47, 47);
+  border-radius: 0 0 0 50px;
+  background: #536369;
+  color: white;
+  padding-top: 20px;
+  padding-right: 10px;
+  font-size: 1.5rem;
+}
+
+/* ---------- COIN CHART ---------- */
+
+#coin-chart-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -25%);
+}
+
+/* ---------- VOLUME CHART ---------- */
+
+#vol-chart-section {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  max-width: 90vw;
+  margin: 100px 0;
+}
+
+#vol-chart {
+  max-width: 90%;
+  max-height: 500px;
+  background: rgb(36, 34, 34);
+  padding: 10px 30px 30px 30px;
+  border-radius: 0 50px 0 50px;
+}
+
+/* ---------- MARKET CAP TABLE ---------- */
+
+#market-cap-section {
+  max-width: 100vw;
+  margin: 0 50px 50px 50px;
+}
+
+#market-cap-section-header {
+  margin-left: 20px;
+}
+
+#market-cap-table-header {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  margin-top: 80px;
+  height: 70px;
+  background: orange;
+  color: white;
+  border: 1px solid black;
+  border-radius: 0 50px 0 0;
+}
+
+.table-row {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  height: 100px;
+  border: 1px solid black;
+  background: #e0dcd7;
+}
+
+.table-row:last-child {
+  border-radius: 0 0 0 50px;
 }
